[package]
name = "result"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concrete = { version = "0.2.0-beta", features = ["integers", "serde"]}
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"], optimal = true }
serde_json = "1.0"
polars = "0.14.2"
polars-core = {version = "0.14.2", features = ["ndarray"]}

